#10 added TagEntity and multiple relations + controllers and services + AuditingEntityListener management)